perf(core): optimize database indexes, HikariCP connection pool, and frontend SWR cache